# gmail-moneywiz-export

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: new-bank-or-plugin-request.md  parser-bug-or-regression.md
.github/workflows/: ci.yml
config/: accounts.example.yaml
docs/: plugins.md
examples/third_party_plugin/: README.md  pyproject.toml
examples/third_party_plugin/src/gmail_moneywiz_plugin_demo_bank/: __init__.py  plugin.py
samples/bac/: compra_crc_1234.txt
samples/promerica/: usd_5678.txt
samples/scotia/: approved_crc_visa_4321.txt  declined_crc_visa_4321.txt
src/gmail_moneywiz_export/: __main__.py  cli.py  config.py  exporter.py  gmail_client.py  mapping.py  message_text.py  models.py  moneywiz.py  normalization.py  plugins.py  processor.py
src/gmail_moneywiz_export/parsers/: __init__.py  bac.py  promerica.py  scotia.py
tests/: helpers.py  test_bac_parser.py  test_cli.py  test_exporter.py  test_mapping.py  test_moneywiz.py  test_normalization.py  test_plugins.py  test_processor.py  test_promerica_parser.py  test_scotia_parser.py
